--- a/conda/faiss-gpu/meta.yaml
+++ b/conda/faiss-gpu/meta.yaml
@@ -96,18 +96,18 @@ outputs:
       host:
         - mkl =2023.0  # [x86_64]
         - python {{ python }}
-        - numpy >=1.19,<2
+        - numpy >=2
         - _openmp_mutex =4.5=2_kmp_llvm  # [x86_64 and not win]
         - {{ pin_subpackage('libfaiss', exact=True) }}
       run:
         - mkl =2023.0  # [x86_64]
         - python {{ python }}
-        - numpy >=1.19,<2
+        - numpy >=2
         - packaging
         - {{ pin_subpackage('libfaiss', exact=True) }}
     test:
       requires:
-        - numpy >=1.19,<2
+        - numpy >=2
         - scipy
         - pytorch <2.5
         - pytorch-cuda {{ cuda_constraints }}
