--- a/conda/faiss/meta.yaml
+++ b/conda/faiss/meta.yaml
@@ -109,7 +109,7 @@ outputs:
         {% endif %}
       host:
         - python {{ python }}
-        - numpy >=1.19,<2
+        - numpy >=2
         - {{ pin_subpackage('libfaiss', exact=True) }}
         - _openmp_mutex =4.5=2_kmp_llvm  # [x86_64 and not win]
         {% if PY_VER == '3.9' or PY_VER == '3.10' or PY_VER == '3.11' %}
@@ -122,7 +122,7 @@ outputs:
         {% endif %}
       run:
         - python {{ python }}
-        - numpy >=1.19,<2
+        - numpy >=2
         - packaging
         - {{ pin_subpackage('libfaiss', exact=True) }}
         {% if PY_VER == '3.9' or PY_VER == '3.10' or PY_VER == '3.11' %}
@@ -135,7 +135,7 @@ outputs:
         {% endif %}
     test:
       requires:
-        - numpy >=1.19,<2
+        - numpy >=2
         - scipy
         - pytorch <2.5
         {% if PY_VER == '3.9' or PY_VER == '3.10' or PY_VER == '3.11' %}
